--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="blue">
    <div id="app">
+      <header>
+         <img src="./assets/logo.svg" alt="">
+      </header>
+      <main id="cards">
+ 
+      </main>
    </div>
    <script src="./main.js"></script>
 </body>
